# ai-codebase-intelligence

./: .env.example  .gitignore  README.md  api.http  pyproject.toml  requirements.txt  run_tests.bat  setup.bat  start_backend.bat  start_frontend.bat
backend/: config.py  main.py
backend/api/: session_cache.py
backend/api/models/: schemas.py
backend/api/routes/: architecture.py  ingest.py  query.py
backend/chunking/: smart_chunker.py
backend/embeddings/: embedding_model.py  embedding_pipeline.py
backend/flow_tracer/: execution_tracer.py
backend/graphs/: call_graph.py  dependency_graph.py
backend/ingestion/: file_scanner.py  ingestion_orchestrator.py  repo_cloner.py
backend/llm/: llm_client.py  prompt_builder.py  reasoning_engine.py
backend/parsing/: code_unit.py  generic_parser.py  parser_dispatcher.py  python_parser.py
backend/retrieval/: retrieval_engine.py
backend/vectordb/: chroma_store.py
docker/: Dockerfile  docker-compose.yml
frontend/: app.py
tests/: conftest.py  test_api.py  test_embeddings.py  test_flow_tracer.py  test_graphs.py  test_ingestion.py  test_parsing.py  test_retrieval.py  test_vectordb.py
